<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:elevation="4dp"
        android:padding="15dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Profile Icon -->
            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="App Logo"
                android:src="@drawable/ic_back" />

            <!-- Toolbar Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="75dp"
                android:text="Reset Password"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="100dp">

        <EditText
            android:id="@+id/reset_old_ET"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="20dp"
            android:autofillHints="password"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/old_password"
            android:inputType="text|textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="#228B22"
            android:textColorHint="#228B22"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/reset_new_ET"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/new_password"
            android:inputType="text|textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="#228B22"
            android:textColorHint="#228B22"
            android:autofillHints="password"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/reset_reNew_ET"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="@font/poppins"
            android:hint="@string/confirm_new_password"
            android:inputType="text|textPassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="#228B22"
            android:textColorHint="#228B22"
            android:autofillHints="password"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/profile_resetPass_Btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="330dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_background"
            android:fontFamily="@font/poppins"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:autofillHints="password"
            tools:ignore="TouchTargetSizeCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>